# Excalibur

./: .gitignore  Dockerfile  Excalibur.py  ExegolSpector.py  README.md  docker-compose.yml  pyproject.toml  setup.py
Modules/: attack_orchestrator.py  cve_search.py  metrics_server.py
docs/: README_HEADER.md
excalibur/: __init__.py  banner.py  cli.py  runtime.py  tui.py
exegol_spector/: __init__.py  cli.py  config.py  knowledge.py  models.py  nmap_report.py  playbooks.py  reports.py  runner.py
tests/: test_knowledge.py  test_playbooks.py  test_reports.py
