[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excalibur-cli"
version = "1.0.0"
description = "Knowledge-driven Nmap orchestration with Ansible and structured reporting."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "iacker" }
]
dependencies = [
  "requests>=2.31.0,<3.0.0",
]
keywords = ["nmap", "ansible", "security", "cli", "reporting"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
]

[project.scripts]
excalibur = "excalibur.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["excalibur*", "exegol_spector*"]
